@@ -1172,12 +1172,15 @@ find_field (struct type *type, char *name)
     {
       char *this_name = TYPE_FIELD_NAME (type, i);
 
-      if (this_name && strcmp (name, this_name) == 0)
-	return i;
+      if (this_name)
+	{
+	  if (strcmp (name, this_name) == 0)
+	    return i;
 
-      if (this_name[0] == '\0')
-	internal_error (__FILE__, __LINE__,
-			_("find_field: anonymous unions not supported"));
+	  if (this_name[0] == '\0')
+	    internal_error (__FILE__, __LINE__,
+			    _("find_field: anonymous unions not supported"));
+	}
     }
 
   error (_("Couldn't find member named `%s' in struct/union `%s'"),
